--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <datasafe.version>0.4.3</datasafe.version>
         <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.18.6</lombok.version>
     </properties>
@@ -90,8 +90,6 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
-
-
     </dependencies>
 
 </project>
