--- a/datasafe-migration-shaded-0.6.1/pom.xml
+++ b/datasafe-migration-shaded-0.6.1/pom.xml
@@ -71,6 +71,26 @@
                                     <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.impl.SimpleDatasafeServiceImpl</pattern>
                                     <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.impl.SO_SimpleDatasafeServiceImpl</shadedPattern>
                                 </relocation>
+
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.UserID</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.SO_UserID</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.keystore.ReadKeyPassword</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.keystore.SO_ReadKeyPassword</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.AmazonS3DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_AmazonS3DFSCredentials</shadedPattern>
+                                </relocation>
+
+
+
                             </relocations>
                         </configuration>
                     </execution>
