DOC-284 now with minio

--- a/datasafe-migration/src/test/resources/simplelogger.properties
+++ b/datasafe-migration/src/test/resources/simplelogger.properties
@@ -12,4 +12,4 @@ org.slf4j.simpleLogger.levelInBrackets=true
 org.slf4j.simpleLogger.logFile=System.out
 
 # specific log level
-org.slf4j.simpleLogger.log.de.adorsys.datasafemigration=debug
+# org.slf4j.simpleLogger.log.de.adorsys.datasafemigration=debug
