--- a/datasafe-migration-shaded-0.6.1/pom.xml
+++ b/datasafe-migration-shaded-0.6.1/pom.xml
@@ -81,16 +81,17 @@
                                     <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.keystore.SO_ReadKeyPassword</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.DFSCredentials</pattern>
-                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials</shadedPattern>
+                                    <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.FilesystemDFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_FilesystemDFSCredentials</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.AmazonS3DFSCredentials</pattern>
                                     <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_AmazonS3DFSCredentials</shadedPattern>
                                 </relocation>
-
-
-
+                                <relocation>
+                                    <pattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials</shadedPattern>
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
