--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <lombok.version>1.18.6</lombok.version>
         <jupiter.version>5.4.1</jupiter.version>
         <surefire.version>2.22.1</surefire.version>
+        <testcontainers.version>1.12.1</testcontainers.version>
+        <mockito.core.version>2.25.1</mockito.core.version>
     </properties>
 
 </project>
