--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ language: java
 jdk:
   - openjdk8
 
-
 script:
-  - mvn test
+  - mvn clean install
 
 before_deploy:
   - echo $GPG_SECRET_KEY | base64 --decode | $GPG_EXECUTABLE --import
