--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ before_deploy:
 
 deploy:
   -
-    skip_cleanup: false
+    skip_cleanup: true
     provider: script
     script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN
     on:
       branch: develop
   -
-    skip_cleanup: false
+    skip_cleanup: true
     provider: script
     script: /bin/bash .travis/deploy.sh
     on:
