--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: java
 jdk:
   - openjdk8
 
+
 script:
-  - mvn clean install
+  - mvn test
 
 before_deploy:
   - echo $GPG_SECRET_KEY | base64 --decode | $GPG_EXECUTABLE --import
