--- a/datasafe-migration-shaded-0.6.1/pom.xml
+++ b/datasafe-migration-shaded-0.6.1/pom.xml
@@ -40,6 +40,7 @@
                                 <includes>
                                     <include>de.adorsys:datasafe-simple-adapter-impl</include>
                                     <include>de.adorsys:datasafe-simple-adapter-api</include>
+                                    <include>de.adorsys:datasafe-simple-adapter-spring</include>
                                     <include>de.adorsys:datasafe-encryption-api</include>
                                     <include>de.adorsys:datasafe-business</include>
                                     <include>de.adorsys:datasafe-directory-api</include>
