--- a/datasafe-migration-shaded-1.0.0/pom.xml
+++ b/datasafe-migration-shaded-1.0.0/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>de.adorsys</groupId>
-            <artifactId>datasafe-simple-adapter-impl</artifactId>
+            <artifactId>datasafe-simple-adapter-spring</artifactId>
             <version>1.0.0</version>
         </dependency>
     </dependencies>
@@ -40,6 +40,7 @@
                                 <includes>
                                     <include>de.adorsys:datasafe-simple-adapter-impl</include>
                                     <include>de.adorsys:datasafe-simple-adapter-api</include>
+                                    <include>de.adorsys:datasafe-simple-adapter-spring</include>
                                     <include>de.adorsys:datasafe-encryption-api</include>
                                     <include>de.adorsys:datasafe-business</include>
                                     <include>de.adorsys:datasafe-directory-api</include>
