--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>datasafe-migration-shaded-0.6.1</module>
         <module>datasafe-migration-shaded-1.0.0</module>
         <module>datasafe-migration</module>
+        <module>datasafe-migration-silent</module>
     </modules>
 
 
@@ -29,6 +30,8 @@
         <surefire.version>2.22.1</surefire.version>
         <testcontainers.version>1.12.1</testcontainers.version>
         <mockito.core.version>2.25.1</mockito.core.version>
+        <spring.framework.version>5.1.7.RELEASE</spring.framework.version>
+        <apache.commons.lang.version>3.9</apache.commons.lang.version>
     </properties>
 
 </project>
