--- a/datasafe-migration-shaded-0.6.1/pom.xml
+++ b/datasafe-migration-shaded-0.6.1/pom.xml
@@ -62,8 +62,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>de.adorsys.datasafe.encrypiton.api.types.UserIDAuth</pattern>
-                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.SO_UserIDAuth
-                                    </shadedPattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.SO_UserIDAuth</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>de.adorsys.datasafe.simple.adapter.api.SimpleDatasafeService</pattern>
@@ -82,53 +81,34 @@
                                     <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DocumentFQN</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.ListRecursiveFlag
-                                    </pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_ListRecursiveFlag
-                                    </shadedPattern>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.ListRecursiveFlag</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_ListRecursiveFlag</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.adorsys.datasafe.simple.adapter.impl.SimpleDatasafeServiceImpl
-                                    </pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.simple.adapter.impl.SO_SimpleDatasafeServiceImpl
-                                    </shadedPattern>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.impl.SimpleDatasafeServiceImpl</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.impl.SO_SimpleDatasafeServiceImpl</shadedPattern>
                                 </relocation>
-
                                 <relocation>
                                     <pattern>de.adorsys.datasafe.encrypiton.api.types.UserID</pattern>
-                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.SO_UserID
-                                    </shadedPattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.SO_UserID</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.adorsys.datasafe.encrypiton.api.types.keystore.ReadKeyPassword
-                                    </pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.encrypiton.api.types.keystore.SO_ReadKeyPassword
-                                    </shadedPattern>
+                                    <pattern>de.adorsys.datasafe.encrypiton.api.types.keystore.ReadKeyPassword</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.encrypiton.api.types.keystore.SO_ReadKeyPassword</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>
-                                        de.adorsys.datasafe.simple.adapter.api.types.FilesystemDFSCredentials
-                                    </pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_FilesystemDFSCredentials
-                                    </shadedPattern>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.FilesystemDFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_FilesystemDFSCredentials</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.AmazonS3DFSCredentials
-                                    </pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_AmazonS3DFSCredentials
-                                    </shadedPattern>
+                                    <pattern>de.adorsys.datasafe.simple.adapter.api.types.AmazonS3DFSCredentials</pattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_AmazonS3DFSCredentials</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>de.adorsys.datasafe.simple.adapter.api.types.DFSCredentials</pattern>
-                                    <shadedPattern>
-                                        de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials
-                                    </shadedPattern>
+                                    <shadedPattern>de.adorsys.datasafe_0_6_1.simple.adapter.api.types.SO_DFSCredentials</shadedPattern>
                                 </relocation>
+
                                 <relocation>
                                     <pattern>de.adorsys.datasafe</pattern>
                                     <shadedPattern>de.adorsys.datasafe_0_6_1</shadedPattern>
