--- a/datasafe-migration-silent/pom.xml
+++ b/datasafe-migration-silent/pom.xml
@@ -28,6 +28,13 @@
             <artifactId>datasafe-migration-shaded-1.0.0</artifactId>
             <version>${project.version}</version>
         </dependency>
+<!--
+        <dependency>
+            <groupId>de.adorsys</groupId>
+            <artifactId>datasafe-migration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+-->
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -117,11 +124,9 @@
         <dependency>
             <groupId>com.google.dagger</groupId>
             <artifactId>dagger</artifactId>
-            <version>2.24</version>
+            <version>${dagger.version}</version>
             <scope>test</scope>
         </dependency>
-
-
 
     </dependencies>
 
