--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <dagger.version>2.24</dagger.version>
         <amazon.aws.version>1.11.538</amazon.aws.version>
         <google.guava.version>27.1-jre</google.guava.version>
+        <bcprov.version>1.64</bcprov.version>
 
     </properties>
 
